syntax = "proto3";

package dev.matvenoid.proto;

option java_multiple_files = true;

import "reviews.proto";

service ReviewService {
  rpc GetReviews(GetReviewsRequest) returns (GetReviewsResponse);
}
